# active-light

./: .gitignore  README.md  pyproject.toml
al/: LICENSE.txt  base.py  binning.py  distances.py  distributions.py  kde.py  prior.py
al/loops/: __init__.py  base.py  experiments.py  perfect_oracle.py  stats.py  wrappers.py
al/plot/: __init__.py  results.py  ternary.py
al/sampling/: base.py  baseline.py  combination.py  kernels.py  qbc.py
al/sampling/repr/: knn.py  pr_density.py
al/sampling/uncert/: __init__.py  base.py  classical.py  evidence.py  metrics.py
al/sampling/uncert/classification/: base.py  classical.py  evidence.py  metrics.py  prior.py  proba_density.py
al/sampling/uncert/regression/: __init__.py  base.py  variance_based.py
experiments/proba-density/: README.md  classification_experiments.ipynb
tests/: conftest.py  helpers.py  test_distances.py  test_kde.py  test_loops.py  test_metrics.py
tests/loops/: test_base.py  test_experiments.py  test_perfect_oracle.py
tests/sampling/: test_active_state.py  test_base.py  test_baseline.py  test_combination.py  test_qbc.py  test_uncert.py  test_uncert_classification.py  test_variance.py
tests/sampling/repr/: test_common.py  test_knn.py  test_proba_density.py
tests/sampling/uncert/: test_variance.py
tests/sampling/uncert/classification/: test_common.py  test_evidence.py  test_prior.py  test_proba_density.py
