[tool.poetry]
name = "active-light"
version = "0.1.0"
description = "Comprehensive active machine learning library for knowledge acquisition."
authors = ["Daniel Kaluza <daniel.kaluza.dk@gmail.com>"]
readme = "README.md"
packages = [{ include = "al" }]

[tool.poetry.dependencies]
torch = { version = ">=2.1.0" }
python = ">=3.11, <3.12"
torchvision = "^0.16.0"
torchaudio = "^2.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
isort = "^5.12.0"
pylint = "^3.0.2"
poethepoet = "^0.24.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
ipykernel = "^6.26.0"
pytest-profiling = "^1.7.0"


[tool.poetry.group.plot]
optional = true

[tool.poetry.group.plot.dependencies]
mpltern = ">=1.0.2"
matplotlib = ">=3.8.1"

[tool.poetry.group.loops]
optional = true
[tool.poetry.group.loops.dependencies]
tqdm = "^4.66.1"
torcheval = "^0.0.7"
pydantic = "^2.4.2"
ormsgpack = "^1.4.1"

[tool.poetry.group.experiments]
optional = true
[tool.poetry.group.experiments.dependencies]
openml = "^0.14.1"
xgboost = "^2.0.2"
scipy = "^1.11.3"
scikit-learn = "^1.3.2"
cupy = "^12.2.0"
xgboost-distribution = "^0.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks]
test = "pytest --cov=al"
install-gpu = "pip3 install  --upgrade --force-reinstall --no-deps torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121"
install-all = "poetry install --with dev,plot,loops,experiments"
